{
  "version": 4,
  "terraform_version": "1.16.0",
  "serial": 10,
  "lineage": "26aa1332-e8ec-4d77-0ce9-90f359fb0771",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ba4172b23e57d5a8",
            "arn": "arn:aws:ec2:ap-southeast-1:767397956626:instance/i-0d7c51346f5ee01e2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d7c51346f5ee01e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-terraform-analysis-ssh-key.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fb3164ff56024552"
              }
            ],
            "primary_network_interface_id": "eni-0fb3164ff56024552",
            "private_dns": "ip-10-0-1-130.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.130",
            "public_ip": "52.77.214.133",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e0b9f12566d9e94e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eeecad51566c160b",
            "tags": {
              "Department": "devops",
              "Name": "aws-terraform-analysis-hellocloud-instance"
            },
            "tags_all": {
              "Department": "devops",
              "Name": "aws-terraform-analysis-hellocloud-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fd9169296b2f7fc1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397956626",
            "id": "i-0d7c51346f5ee01e2",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_key_pair.my_key_pair",
            "aws_security_group.allow_tls",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.my_key_gen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397956626:security-group/sg-0fd9169296b2f7fc1",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0fd9169296b2f7fc1",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "767397956626",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-terraform-analysis"
            },
            "tags_all": {
              "Name": "aws-terraform-analysis"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2a1928ad5be010b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397956626",
            "id": "sg-0fd9169296b2f7fc1",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397956626:subnet/subnet-0eeecad51566c160b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeecad51566c160b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397956626",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "aws-terraform-analysis"
            },
            "tags_all": {
              "Name": "aws-terraform-analysis"
            },
            "vpc_id": "vpc-0c2a1928ad5be010b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397956626",
            "id": "subnet-0eeecad51566c160b",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397956626:vpc/vpc-0c2a1928ad5be010b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0633544a4f166a4f2",
            "default_route_table_id": "rtb-040e2e0976022565f",
            "default_security_group_id": "sg-051efca74a24f87ac",
            "dhcp_options_id": "dopt-0e23f3a90282c0bee",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2a1928ad5be010b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-040e2e0976022565f",
            "owner_id": "767397956626",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "aws-terraform-analysis"
            },
            "tags_all": {
              "Name": "aws-terraform-analysis"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397956626",
            "id": "vpc-0c2a1928ad5be010b",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397956626:security-group-rule/sgr-04c60144496824bd2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04c60144496824bd2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-0fd9169296b2f7fc1",
            "security_group_rule_id": "sgr-04c60144496824bd2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397956626",
            "id": "sgr-04c60144496824bd2",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397956626:security-group-rule/sgr-0bdf44354b7deb67e",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0bdf44354b7deb67e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-0fd9169296b2f7fc1",
            "security_group_rule_id": "sgr-0bdf44354b7deb67e",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397956626",
            "id": "sgr-0bdf44354b7deb67e",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397956626:security-group-rule/sgr-0c76fcbc7aabcf01d",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0c76fcbc7aabcf01d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-0fd9169296b2f7fc1",
            "security_group_rule_id": "sgr-0c76fcbc7aabcf01d",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767397956626",
            "id": "sgr-0c76fcbc7aabcf01d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    }
  ]
}